# fedora-mingw

./: .gitignore  .hgignore  BUILD.pl  IGNORE  README  build-everything-in-mock.sh  ocaml-status.pl  packagestatus.txt  packaging-guidelines.txt  show-build-order.pl  status.pl  upload.sh
SDL/: SDL-1.2.10-libdir.patch  SDL-1.2.10-pagesize.patch  SDL-1.2.11-fixman.patch  mingw32-SDL.spec
atk/: atk-1.23.5-mingw.patch  compare.supp  mingw-atk.spec  mingw32-atk.spec
binutils/: compare.supp  mingw-binutils.spec  mingw32-binutils.spec
boost/: mingw32-boost.spec  mingw32-boost.spec-1.37.0beta1  svn-r48960.diff
bootstrap/: mingw-bootstrap.spec
bzip2/: mingw32-bzip2-1.0.5-dll.patch  mingw32-bzip2.spec
cairo/: Makefile  mingw-cairo.spec  mingw32-cairo.spec  svgspacewar.c
cairomm/: mingw32-cairomm.spec
cmake/: cmake-2.6.4-vtk64.patch  mingw32-cmake.spec
compare/: README  compare.py  compare.sh
cross-zlib/: README  mingw32-zlib.spec
crossreport/: README  crossreport.pl  mingw32-crossreport.spec  update-crossreport-db.pl
crystalspace/: README
curl/: Makefile  curl-7.15.3-multilib.patch  curl-7.16.0-privlibs.patch  curl-7.17.1-badsocket.patch  curl-7.17.1-sslgen.patch  curl-7.18.2-nss-thread-safety.patch  curl-7.18.2-nssproxy.patch  curl-7.19.4-enable-aes.patch  curl-7.19.4-nss-leak.patch  curl-7.19.4-tool-leak.patch  mingw-curl-7.18.2-getaddrinfo.patch  mingw32-curl.spec  test1.c
darwinx-filesystem/: darwinx-filesystem.spec
dbus/: mingw32-dbus.spec  (+2 more)
example_library/: CMakeLists.txt  example.c  example.spec  maketarball.sh  mingw32-example.spec  runtest.c
(+362 files in other folders)
